--- a/style.css
+++ b/style.css
@@ -10,7 +10,12 @@ body {
     display: flex;
     flex-direction: column;
   }
-
+  h2 {
+    margin-top: 0px;
+  }
+h3 {
+    margin-top: 0px;
+}
 
 .word-board {
     display: flex;
@@ -23,28 +28,46 @@ body {
 }
 
 .guess-sqr {
-font-size: 35px;
-border: 2px solid black;
+font-size: 40px;
+border: 1px solid black;
 width: 20%;
+aspect-ratio: 1/1;
 }
 
 .keyboard{
     display: flex;
     flex-wrap: wrap;
-    width: 350px;
-    background-color: lightgreen;          
+    width: 350px;         
     justify-content: center;
     align-items: center;
     margin: auto;
-    margin-top: 20px; 
+    margin-top: 10px; 
 }
 
 .key-sqr {
     
-    font-size: 35px;
-    border: 2px solid black;
+    font-size: 30px;
+    border: 1px solid black;
     width: 10%;
+    background-color: lightgreen;
     }
 .guess-items{
 margin: 20px;
+}
+
+.key-line-1 {
+display: flex;
+justify-content: row;
+width: 100%;
+}
+
+.key-line-2 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+.key-line-3 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
