--- a/style.css
+++ b/style.css
@@ -104,3 +104,11 @@ width: 100%;
     margin-top: 20px;
   
 }
+
+.not-in-word {
+    background-color: blueviolet;
+}
+
+.in-word {
+    background-color: red;
+}
