--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ font-size: 40px;
 border: 1px solid black;
 width: 19%;
 aspect-ratio: 1/1;
-background-color: rgb(22, 180, 8);
+background-color: lightslategray;
 text-align: center;
 
 }
@@ -56,8 +56,7 @@ text-align: center;
     font-size: 30px;
     border: 1px solid black;
     width: 35px;
-    background-color: rgb(22, 180, 8);
-    
+    background-color: lightslategray;
     
     }
     
@@ -106,9 +105,9 @@ width: 100%;
 }
 
 .not-in-word {
-    background-color: blueviolet;
+    background-color: rgb(220, 41, 41);
 }
 
 .in-word {
-    background-color: red;
+    background-color: rgb(22, 180, 8);
 }
