--- a/style.css
+++ b/style.css
@@ -111,3 +111,7 @@ width: 100%;
 .in-word {
     background-color: rgb(22, 180, 8);
 }
+
+.in-wrong-spot {
+    background-color: rgb(206, 203, 11);
+}
